Added the index

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 		<br>
 		<h2 >Step 1 :Learn the Basics </h2>
 
+		<br>
+
+		<h3> Lec 1: Things to Know in C++/Java/Python or any Language </h3>
+
 		<p>	User Input / Output: <a href="https://www.geeksforgeeks.org/problems/search-query-auto-complete/0?category[]=Strings&problemStatus=unsolved&difficulty[]=2&page=1&query=category[]StringsproblemStatusunsolveddifficulty[]2page1category[]Str" title="Search Query Auto Complete" target="blank">Search Query Auto Complete</a></p>
 
 		<br>
@@ -41,13 +45,13 @@
 
 		<br>
 
-		<h2 >Step 2 :Build-up Logical Thinking </h2>
+		<h3> Lec 2: Build-up Logical Thinking</h3>
 
 		<p>Patterns: <a href="https://www.youtube.com/watch?v=tNm_NNSB3_w&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=4" title="Solve any Pattern Question - Trick Explained | 22 Patterns in 1 Shot | Strivers A2Z DSA Course" target="blank">Solve any Pattern Question - Trick Explained | 22 Patterns in 1 Shot Video | Strivers A2Z DSA Course</a></p>
 
 		<br>
 
-		<h2 >Step 3 :Learn STL/Java-Colletions or similar thing in your language </h2>
+		<h3> Lec 3: Learn STL/Java-Collections or similar thing in your language</h3>
 
 		<p>C++ STL: <a href="https://www.youtube.com/watch?v=RRVYpIET_RU" title="Complete C++ STL in 1 Video | Time Complexity" target="blank">Complete C++ STL in 1 Video | Time Complexity</a></p>
 		
