--- a/index.html
+++ b/index.html
@@ -1,60 +1,156 @@
 <!DOCTYPE html>
-<html>
-	<head>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Strivers A2Z DSA Course/Sheet</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f9;
+      color: #333;
+      padding: 20px;
+    }
 
-		<meta charset="utf-8">
-		<title> Strivers A2Z DSA Course/Sheet </title>
+    h1 {
+      color: #1e90ff;
+      text-align: center;
+      margin-bottom: 30px;
+    }
 
-	</head>
+    h2, h3 {
+      color: #2c3e50;
+      margin-top: 20px;
+    }
 
-	<body>
+    p {
+      margin-left: 20px;
+      line-height: 1.6;
+    }
 
-		<h1 >Strivers A2Z DSA Course/Sheet</h1>
-		<br>
-		<h2 >Step 1 :Learn the Basics </h2>
+    a {
+      color: #1e90ff;
+      text-decoration: none;
+    }
 
-		<br>
+    a:hover {
+      text-decoration: underline;
+    }
 
-		<h3> Lec 1: Things to Know in C++/Java/Python or any Language </h3>
+    .dropdown-container {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 30px;
+      flex-wrap: wrap;
+    }
 
-		<p>	User Input / Output: <a href="https://www.geeksforgeeks.org/problems/search-query-auto-complete/0?category[]=Strings&problemStatus=unsolved&difficulty[]=2&page=1&query=category[]StringsproblemStatusunsolveddifficulty[]2page1category[]Str" title="Search Query Auto Complete" target="blank">Search Query Auto Complete</a></p>
+    select {
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
 
-		<br>
+    .collapsible-header {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 18px;
+    }
 
-		<p>	If Else statements: <a href="https://www.geeksforgeeks.org/problems/java-if-else-decision-making0924/0?category%255B%255D=Java&query=category%255B%255DJavadifficulty%255B%255D-2page1category%255B%255DJava&difficulty%255B%255D=-2&page=1" title="Decision Making" target="blank">Decision Making</a></p>
+    .arrow {
+      margin-right: 8px;
+      transition: transform 0.3s;
+    }
 
-		<br>
+    .arrow.rotate {
+      transform: rotate(90deg);
+    }
 
-		<p>	Switch Statement: <a href="https://www.geeksforgeeks.org/problems/java-switch-case-statement3529/1" title="Java Switch Case statement" target="blank">Switch Case statement</a></p>
+    .content {
+      display: none;
+      margin-top: 5px;
+    }
+  </style>
+</head>
+<body>
 
-		<br>
+  <h1>Strivers A2Z DSA Course/Sheet</h1>
 
-		<p> For loops: <a href="https://www.naukri.com/code360/problems/nth-fibonacci-number_74156" title="Nth Fibonacci Number" target="blank">Nth Fibonacci Number</a></p>
+  
+  <div class="dropdown-container">
+    <div>
+      <label for="step-select">Jump to Step:</label><br>
+      <select id="step-select" onchange="scrollToSection(this.value)">
+        <option value="">-- Select Step --</option>
+        <option value="step1">Step 1: Learn the Basics</option>
+      </select>
+    </div>
+  </div>
 
-		<br>
 
-		<p>	While Loop: <a href="https://www.geeksforgeeks.org/problems/while-loop-printtable-java/1" title="While loop- printTable - Java" target="blank">While loop- printTable</a></p>	
+  <h2 id="step1">Step 1: Learn the Basics</h2>
 
-		<br>
 
-		<p>Functions (Pass by Reference and Value): <a href="https://www.geeksforgeeks.org/problems/pass-by-reference-and-value/1?utm_medium=collab_striver_ytdescription&utm_campaign=pass-by-reference-and-value&utm_source=youtube" title="Pass by Reference and Value" target="blank">Pass by Reference and Value</a></p>
+  <div class="collapsible-header" onclick="toggleContent(this)">
+    <span class="arrow">▶</span> Lec 1: Things to Know in C++/Java/Python or any Language
+  </div>
+  <div class="content">
+    <p>User Input / Output: <a href="https://www.geeksforgeeks.org/problems/search-query-auto-complete/0" target="_blank">Search Query Auto Complete</a></p>
+    <p>If Else statements: <a href="https://www.geeksforgeeks.org/problems/java-if-else-decision-making0924/0" target="_blank">Decision Making</a></p>
+    <p>Switch Statement: <a href="https://www.geeksforgeeks.org/problems/java-switch-case-statement3529/1" target="_blank">Switch Case statement</a></p>
+    <p>For loops: <a href="https://www.naukri.com/code360/problems/nth-fibonacci-number_74156" target="_blank">Nth Fibonacci Number</a></p>
+    <p>While Loop: <a href="https://www.geeksforgeeks.org/problems/while-loop-printtable-java/1" target="_blank">While loop - Print Table</a></p>
+    <p>Functions: <a href="https://www.geeksforgeeks.org/problems/pass-by-reference-and-value/1" target="_blank">Pass by Reference and Value</a></p>
+    <p>Time Complexity: <a href="https://www.youtube.com/watch?v=FPu9Uld7W-E" target="_blank">Time & Space Complexity - Video</a></p>
+  </div>
 
-		<br>
+  <!-- Lecture 2 -->
+  <div class="collapsible-header" onclick="toggleContent(this)">
+    <span class="arrow">▶</span> Lec 2: Build-up Logical Thinking
+  </div>
+  <div class="content">
+    <p>Patterns: <a href="https://www.youtube.com/watch?v=tNm_NNSB3_w" target="_blank">22 Patterns in 1 Shot - Striver</a></p>
+  </div>
 
-		<p>Time Complexity [Learn Basics, and then analyse in next Steps]: <a href="https://www.youtube.com/watch?v=FPu9Uld7W-E" title="Time and Space Complexity - Strivers A2Z DSA Course" target="blank">Time and Space Complexity Video - Strivers A2Z DSA Course</a></p>
+  <!-- Lecture 3 -->
+  <div class="collapsible-header" onclick="toggleContent(this)">
+    <span class="arrow">▶</span> Lec 3: Learn STL/Java-Collections
+  </div>
+  <div class="content">
+    <p>C++ STL: <a href="https://www.youtube.com/watch?v=RRVYpIET_RU" target="_blank">Complete STL in 1 Video</a></p>
+  </div>
 
-		<br>
+  <!-- Lecture 4 -->
+  <div class="collapsible-header" onclick="toggleContent(this)">
+    <span class="arrow">▶</span> Lec 4: Know Basic Maths
+  </div>
+  <div class="content">
+    <p>Count Digits: <a href="https://www.geeksforgeeks.org/problems/count-digits5716/1" target="_blank">Count Digits</a></p>
+    <p>Reverse a Number: <a href="https://leetcode.com/problems/reverse-integer/description/" target="_blank">Reverse Integer</a></p>
+    <p>Check Palindrome: <a href="https://leetcode.com/problems/valid-palindrome/description/" target="_blank">Valid Palindrome</a></p>
+    <p>GCD or HCF: <a href="https://www.geeksforgeeks.org/problems/lcm-and-gcd4516/1" target="_blank">HCF and GCD</a></p>
+    <p>Print all Divisors: <a href="https://www.geeksforgeeks.org/problems/sum-of-all-divisors-from-1-to-n4738/1" target="_blank">Sum of Divisors from 1 to N</a></p>
+    <p>Check for Prime: <a href="https://www.geeksforgeeks.org/problems/minimum-number-of-jumps-1587115620/1" target="_blank">Minimum Jumps</a></p>
+  </div>
 
-		<h3> Lec 2: Build-up Logical Thinking</h3>
 
-		<p>Patterns: <a href="https://www.youtube.com/watch?v=tNm_NNSB3_w&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=4" title="Solve any Pattern Question - Trick Explained | 22 Patterns in 1 Shot | Strivers A2Z DSA Course" target="blank">Solve any Pattern Question - Trick Explained | 22 Patterns in 1 Shot Video | Strivers A2Z DSA Course</a></p>
+  <script>
+    function scrollToSection(sectionId) {
+      if (sectionId) {
+        document.getElementById(sectionId).scrollIntoView({ behavior: 'smooth' });
+      }
+    }
 
-		<br>
+    function toggleContent(header) {
+      const arrow = header.querySelector('.arrow');
+      const content = header.nextElementSibling;
 
-		<h3> Lec 3: Learn STL/Java-Collections or similar thing in your language</h3>
+      content.style.display = content.style.display === 'block' ? 'none' : 'block';
+      arrow.classList.toggle('rotate');
+    }
+  </script>
 
-		<p>C++ STL: <a href="https://www.youtube.com/watch?v=RRVYpIET_RU" title="Complete C++ STL in 1 Video | Time Complexity" target="blank">Complete C++ STL in 1 Video | Time Complexity</a></p>
-		
-	</body> 
-
+</body>
 </html>
