--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
     <span class="arrow">▶</span> Lec 1: Things to Know in C++/Java/Python or any Language
   </div>
   <div class="content">
-    <p>User Input / Output: <a href="https://www.geeksforgeeks.org/problems/search-query-auto-complete/0">Search Query Auto Complete</a></p>
-    <p>If Else statements: <a href="https://www.geeksforgeeks.org/problems/java-if-else-decision-making0924/0">Decision Making</a></p>
-    <p>Switch Statement: <a href="https://www.geeksforgeeks.org/problems/java-switch-case-statement3529/1">Switch Case statement</a></p>
-    <p>For loops: <a href="https://www.naukri.com/code360/problems/nth-fibonacci-number_74156">Nth Fibonacci Number</a></p>
-    <p>While Loop: <a href="https://www.geeksforgeeks.org/problems/while-loop-printtable-java/1">While loop - printTable</a></p>
-    <p>Functions: <a href="https://www.geeksforgeeks.org/problems/pass-by-reference-and-value/1">Pass by Reference and Value</a></p>
+    <p>User Input / Output: <a href="https://www.geeksforgeeks.org/problems/search-query-auto-complete/0">Let's Solve</a></p>
+    <p>If Else statements: <a href="https://www.geeksforgeeks.org/problems/java-if-else-decision-making0924/0">Let's Solve</a></p>
+    <p>Switch Statement: <a href="https://www.geeksforgeeks.org/problems/java-switch-case-statement3529/1">Let's Solve</a></p>
+    <p>For loops: <a href="https://www.naukri.com/code360/problems/nth-fibonacci-number_74156">Let's Solve</a></p>
+    <p>While Loop: <a href="https://www.geeksforgeeks.org/problems/while-loop-printtable-java/1">Let's Solve</a></p>
+    <p>Functions: <a href="https://www.geeksforgeeks.org/problems/pass-by-reference-and-value/1">Let's Solve</a></p>
     <p>Time Complexity: <a href="https://www.youtube.com/watch?v=FPu9Uld7W-E">Time & Space Complexity Video</a></p>
   </div>
 
@@ -128,7 +128,7 @@
     <span class="arrow">▶</span> Lec 2: Build-up Logical Thinking
   </div>
   <div class="content">
-    <p>Patterns: <a href="https://www.youtube.com/watch?v=tNm_NNSB3_w">22 Patterns in 1 Shot</a></p>
+    <p>Patterns: <a href="https://www.youtube.com/watch?v=tNm_NNSB3_w">22 Patterns in 1 Shot Video</a></p>
   </div>
 
   <div class="collapsible-header" onclick="toggleContent(this)">
@@ -142,12 +142,12 @@
     <span class="arrow">▶</span> Lec 4: Know Basic Maths
   </div>
   <div class="content">
-    <p>Count Digits: <a href="https://www.geeksforgeeks.org/problems/count-digits5716/1">Count Digits</a></p>
-    <p>Reverse a Number: <a href="https://leetcode.com/problems/reverse-integer/description/">Reverse Integer</a></p>
-    <p>Palindrome Check: <a href="https://leetcode.com/problems/valid-palindrome/description/">Valid Palindrome</a></p>
-    <p>HCF/GCD: <a href="https://www.geeksforgeeks.org/problems/lcm-and-gcd4516/1">HCF and GCD</a></p>
-    <p>Divisors Sum: <a href="https://www.geeksforgeeks.org/problems/sum-of-all-divisors-from-1-to-n4738/1">Sum 1 to n Divisors</a></p>
-    <p>Check for Prime: <a href="https://www.geeksforgeeks.org/problems/minimum-number-of-jumps-1587115620/1">Minimum Jumps</a></p>
+    <p>Count Digits: <a href="https://www.geeksforgeeks.org/problems/count-digits5716/1">Let's Solve</a></p>
+    <p>Reverse a Number: <a href="https://leetcode.com/problems/reverse-integer/description/">Let's Solve</a></p>
+    <p>Palindrome Check: <a href="https://leetcode.com/problems/valid-palindrome/description/">Let's Solve</a></p>
+    <p>HCF/GCD: <a href="https://www.geeksforgeeks.org/problems/lcm-and-gcd4516/1">Let's Solve</a></p>
+    <p>Divisors Sum: <a href="https://www.geeksforgeeks.org/problems/sum-of-all-divisors-from-1-to-n4738/1">Let's Solve</a></p>
+    <p>Check for Prime: <a href="https://www.geeksforgeeks.org/problems/minimum-number-of-jumps-1587115620/1">Let's Solve</a></p>
   </div>
 
   <!-- Step 2 -->
@@ -157,19 +157,19 @@
     <span class="arrow">▶</span> Lec 1: Sorting - I
   </div>
   <div class="content">
-    <p>Selection Sort: <a href="https://www.geeksforgeeks.org/problems/selection-sort/1">Selection Sort</a></p>
-    <p>Bubble Sort: <a href="https://www.geeksforgeeks.org/problems/bubble-sort/1">Bubble Sort</a></p>
-    <p>Insertion Sort: <a href="https://www.geeksforgeeks.org/problems/insertion-sort/0">Insertion Sort</a></p>
+    <p>Selection Sort: <a href="https://www.geeksforgeeks.org/problems/selection-sort/1">Let's Solve</a></p>
+    <p>Bubble Sort: <a href="https://www.geeksforgeeks.org/problems/bubble-sort/1">Let's Solve</a></p>
+    <p>Insertion Sort: <a href="https://www.geeksforgeeks.org/problems/insertion-sort/0">Let's Solve</a></p>
   </div>
 
   <div class="collapsible-header" onclick="toggleContent(this)">
     <span class="arrow">▶</span> Lec 2: Sorting - II
   </div>
   <div class="content">
-    <p>Merge Sort: <a href="https://practice.geeksforgeeks.org/problems/merge-sort/1">Merge Sort</a></p>
-    <p>Recursive Bubble Sort: <a href="https://www.geeksforgeeks.org/problems/bubble-sort/1">Bubble Sort</a></p>
-    <p>Recursive Insertion Sort: <a href="https://www.geeksforgeeks.org/problems/insertion-sort/1">Insertion Sort</a></p>
-    <p>Quick Sort: <a href="https://practice.geeksforgeeks.org/problems/quick-sort/1">Quick Sort</a></p>
+    <p>Merge Sort: <a href="https://practice.geeksforgeeks.org/problems/merge-sort/1">Let's Solve</a></p>
+    <p>Recursive Bubble Sort: <a href="https://www.geeksforgeeks.org/problems/bubble-sort/1">Let's Solve</a></p>
+    <p>Recursive Insertion Sort: <a href="https://www.geeksforgeeks.org/problems/insertion-sort/1">Let's Solve</a></p>
+    <p>Quick Sort: <a href="https://practice.geeksforgeeks.org/problems/quick-sort/1">Let's Solve</a></p>
   </div>
 
   <!-- Step 3 -->
@@ -179,7 +179,26 @@
     <span class="arrow">▶</span> Lec 1: Easy
   </div>
   <div class="content">
-    <p>Largest Element in Array: <a href="https://www.geeksforgeeks.org/problems/largest-element-in-array4009/0">Largest Element</a></p>
+    <p>Largest Element in Array: <a href="https://www.geeksforgeeks.org/problems/largest-element-in-array4009/0">Let's Solve</a></p>
+    <p>Second Largest Element in an Array without sorting: <a href="https://www.geeksforgeeks.org/problems/second-largest3735/1?utm_medium=collab_striver_ytdescription&utm_campaign=second-largest&utm_source=youtube">Let's Solve</a></p>
+    <p> Check if the array is sorted: <a href="https://leetcode.com/problems/check-if-array-is-sorted-and-rotated/description/"> Let's Solve</a></p>
+    <p> Remove duplicates from Sorted array: <a href="https://leetcode.com/problems/remove-duplicates-from-sorted-array/description/"> Let's Solve</a></p>
+    <p> Left Rotate an array by one place: <a href="https://leetcode.com/problems/rotate-array/description/"> Let's Solve</a></p>
+    <p> Left rotate an array by D places: <a href="https://leetcode.com/problems/rotate-array/https://leetcode.com/problems/rotate-array/"> Let's Solve</a></p>
+    <p> Move Zeros to end: <a href="https://leetcode.com/problems/move-zeroes/"> Let's Solve</a></p>
+    <p> Linear Search: <a href="https://www.geeksforgeeks.org/problems/who-will-win-1587115621/1?utm_medium=collab_striver_ytdescription&utm_campaign=who-will-win&utm_source=youtube"> Let's Solve</a></p>
+    <p> Find the Union: <a href="https://practice.geeksforgeeks.org/problems/union-of-two-sorted-arrays-1587115621/1?utm_source=youtube&utm_medium=collab_striver_ytdescription&utm_campaign=union-of-two-sorted-arrays"> Let's Solve</a></p>
+    <p> Find missing number in an array: <a href="https://leetcode.com/problems/missing-number/"> Let's Solve</a></p>
+    <p> Maximum Consecutive Ones: <a href="https://leetcode.com/problems/max-consecutive-ones/"> Let's Solve</a></p>
+    <p> Find the number that appears once, and other numbers twice: <a href="https://leetcode.com/problems/single-number/"> Let's Solve</a></p>
+    <p> Longest subarray with given sum K(positives): <a href="https://practice.geeksforgeeks.org/problems/longest-sub-array-with-sum-k0809/1?utm_source=youtube&utm_medium=collab_striver_ytdescription&utm_campaign=longest-sub-array-with-sum-k"> Let's Solve</a></p>
+    <p> Longest subarray with sum K (Positives + Negatives): <a href="https://www.geeksforgeeks.org/problems/longest-sub-array-with-sum-k0809/1?utm_medium=collab_striver_ytdescription&utm_campaign=longest-sub-array-with-sum-k&utm_source=youtube"> Let's Solve</a></p>
+  </div>
+  <div class="collapsible-header" onclick="toggleContent(this)">
+  <span class="arrow">▶</span> Lec 2: Medium
+  </div>
+  <div class="content">
+    <p>Coming Soon</a></p>
   </div>
 
   <script>
