Added Medium Section

--- a/index.html
+++ b/index.html
@@ -115,39 +115,39 @@
     <span class="arrow">▶</span> Lec 1: Things to Know in C++/Java/Python or any Language
   </div>
   <div class="content">
-    <p>User Input / Output: <a href="https://www.geeksforgeeks.org/problems/search-query-auto-complete/0">Let's Solve</a></p>
-    <p>If Else statements: <a href="https://www.geeksforgeeks.org/problems/java-if-else-decision-making0924/0">Let's Solve</a></p>
-    <p>Switch Statement: <a href="https://www.geeksforgeeks.org/problems/java-switch-case-statement3529/1">Let's Solve</a></p>
-    <p>For loops: <a href="https://www.naukri.com/code360/problems/nth-fibonacci-number_74156">Let's Solve</a></p>
-    <p>While Loop: <a href="https://www.geeksforgeeks.org/problems/while-loop-printtable-java/1">Let's Solve</a></p>
-    <p>Functions: <a href="https://www.geeksforgeeks.org/problems/pass-by-reference-and-value/1">Let's Solve</a></p>
-    <p>Time Complexity: <a href="https://www.youtube.com/watch?v=FPu9Uld7W-E">Time & Space Complexity Video</a></p>
+    <p>User Input / Output: <a href="https://www.geeksforgeeks.org/problems/search-query-auto-complete/0" target="blank">Let's Solve</a></p>
+    <p>If Else statements: <a href="https://www.geeksforgeeks.org/problems/java-if-else-decision-making0924/0" target="blank">Let's Solve</a></p>
+    <p>Switch Statement: <a href="https://www.geeksforgeeks.org/problems/java-switch-case-statement3529/1" target="blank">Let's Solve</a></p>
+    <p>For loops: <a href="https://www.naukri.com/code360/problems/nth-fibonacci-number_74156" target="blank">Let's Solve</a></p>
+    <p>While Loop: <a href="https://www.geeksforgeeks.org/problems/while-loop-printtable-java/1" target="blank">Let's Solve</a></p>
+    <p>Functions: <a href="https://www.geeksforgeeks.org/problems/pass-by-reference-and-value/1" target="blank">Let's Solve</a></p>
+    <p>Time Complexity: <a href="https://www.youtube.com/watch?v=FPu9Uld7W-E" target="blank">Time & Space Complexity Video</a></p>
   </div>
 
   <div class="collapsible-header" onclick="toggleContent(this)">
     <span class="arrow">▶</span> Lec 2: Build-up Logical Thinking
   </div>
   <div class="content">
-    <p>Patterns: <a href="https://www.youtube.com/watch?v=tNm_NNSB3_w">22 Patterns in 1 Shot Video</a></p>
+    <p>Patterns: <a href="https://www.youtube.com/watch?v=tNm_NNSB3_w" target="blank">22 Patterns in 1 Shot Video</a></p>
   </div>
 
   <div class="collapsible-header" onclick="toggleContent(this)">
     <span class="arrow">▶</span> Lec 3: Learn STL/Java-Collections
   </div>
   <div class="content">
-    <p>C++ STL: <a href="https://www.youtube.com/watch?v=RRVYpIET_RU">Complete STL in 1 Video</a></p>
+    <p>C++ STL: <a href="https://www.youtube.com/watch?v=RRVYpIET_RU" target="blank">Complete STL in 1 Video</a></p>
   </div>
 
   <div class="collapsible-header" onclick="toggleContent(this)">
     <span class="arrow">▶</span> Lec 4: Know Basic Maths
   </div>
   <div class="content">
-    <p>Count Digits: <a href="https://www.geeksforgeeks.org/problems/count-digits5716/1">Let's Solve</a></p>
-    <p>Reverse a Number: <a href="https://leetcode.com/problems/reverse-integer/description/">Let's Solve</a></p>
-    <p>Palindrome Check: <a href="https://leetcode.com/problems/valid-palindrome/description/">Let's Solve</a></p>
-    <p>HCF/GCD: <a href="https://www.geeksforgeeks.org/problems/lcm-and-gcd4516/1">Let's Solve</a></p>
-    <p>Divisors Sum: <a href="https://www.geeksforgeeks.org/problems/sum-of-all-divisors-from-1-to-n4738/1">Let's Solve</a></p>
-    <p>Check for Prime: <a href="https://www.geeksforgeeks.org/problems/minimum-number-of-jumps-1587115620/1">Let's Solve</a></p>
+    <p>Count Digits: <a href="https://www.geeksforgeeks.org/problems/count-digits5716/1" target="blank">Let's Solve</a></p>
+    <p>Reverse a Number: <a href="https://leetcode.com/problems/reverse-integer/description/" target="blank">Let's Solve</a></p>
+    <p>Palindrome Check: <a href="https://leetcode.com/problems/valid-palindrome/description/" target="blank">Let's Solve</a></p>
+    <p>HCF/GCD: <a href="https://www.geeksforgeeks.org/problems/lcm-and-gcd4516/1" target="blank">Let's Solve</a></p>
+    <p>Divisors Sum: <a href="https://www.geeksforgeeks.org/problems/sum-of-all-divisors-from-1-to-n4738/1" target="blank">Let's Solve</a></p>
+    <p>Check for Prime: <a href="https://www.geeksforgeeks.org/problems/minimum-number-of-jumps-1587115620/1" target="blank">Let's Solve</a></p>
   </div>
 
   <!-- Step 2 -->
@@ -157,19 +157,19 @@
     <span class="arrow">▶</span> Lec 1: Sorting - I
   </div>
   <div class="content">
-    <p>Selection Sort: <a href="https://www.geeksforgeeks.org/problems/selection-sort/1">Let's Solve</a></p>
-    <p>Bubble Sort: <a href="https://www.geeksforgeeks.org/problems/bubble-sort/1">Let's Solve</a></p>
-    <p>Insertion Sort: <a href="https://www.geeksforgeeks.org/problems/insertion-sort/0">Let's Solve</a></p>
+    <p>Selection Sort: <a href="https://www.geeksforgeeks.org/problems/selection-sort/1" target="blank">Let's Solve</a></p>
+    <p>Bubble Sort: <a href="https://www.geeksforgeeks.org/problems/bubble-sort/1" target="blank">Let's Solve</a></p>
+    <p>Insertion Sort: <a href="https://www.geeksforgeeks.org/problems/insertion-sort/0" target="blank">Let's Solve</a></p>
   </div>
 
   <div class="collapsible-header" onclick="toggleContent(this)">
     <span class="arrow">▶</span> Lec 2: Sorting - II
   </div>
   <div class="content">
-    <p>Merge Sort: <a href="https://practice.geeksforgeeks.org/problems/merge-sort/1">Let's Solve</a></p>
-    <p>Recursive Bubble Sort: <a href="https://www.geeksforgeeks.org/problems/bubble-sort/1">Let's Solve</a></p>
-    <p>Recursive Insertion Sort: <a href="https://www.geeksforgeeks.org/problems/insertion-sort/1">Let's Solve</a></p>
-    <p>Quick Sort: <a href="https://practice.geeksforgeeks.org/problems/quick-sort/1">Let's Solve</a></p>
+    <p>Merge Sort: <a href="https://practice.geeksforgeeks.org/problems/merge-sort/1" target="blank">Let's Solve</a></p>
+    <p>Recursive Bubble Sort: <a href="https://www.geeksforgeeks.org/problems/bubble-sort/1" target="blank">Let's Solve</a></p>
+    <p>Recursive Insertion Sort: <a href="https://www.geeksforgeeks.org/problems/insertion-sort/1" target="blank">Let's Solve</a></p>
+    <p>Quick Sort: <a href="https://practice.geeksforgeeks.org/problems/quick-sort/1" target="blank">Let's Solve</a></p>
   </div>
 
   <!-- Step 3 -->
@@ -179,26 +179,51 @@
     <span class="arrow">▶</span> Lec 1: Easy
   </div>
   <div class="content">
-    <p>Largest Element in Array: <a href="https://www.geeksforgeeks.org/problems/largest-element-in-array4009/0">Let's Solve</a></p>
-    <p>Second Largest Element in an Array without sorting: <a href="https://www.geeksforgeeks.org/problems/second-largest3735/1?utm_medium=collab_striver_ytdescription&utm_campaign=second-largest&utm_source=youtube">Let's Solve</a></p>
-    <p> Check if the array is sorted: <a href="https://leetcode.com/problems/check-if-array-is-sorted-and-rotated/description/"> Let's Solve</a></p>
-    <p> Remove duplicates from Sorted array: <a href="https://leetcode.com/problems/remove-duplicates-from-sorted-array/description/"> Let's Solve</a></p>
-    <p> Left Rotate an array by one place: <a href="https://leetcode.com/problems/rotate-array/description/"> Let's Solve</a></p>
-    <p> Left rotate an array by D places: <a href="https://leetcode.com/problems/rotate-array/https://leetcode.com/problems/rotate-array/"> Let's Solve</a></p>
-    <p> Move Zeros to end: <a href="https://leetcode.com/problems/move-zeroes/"> Let's Solve</a></p>
-    <p> Linear Search: <a href="https://www.geeksforgeeks.org/problems/who-will-win-1587115621/1?utm_medium=collab_striver_ytdescription&utm_campaign=who-will-win&utm_source=youtube"> Let's Solve</a></p>
-    <p> Find the Union: <a href="https://practice.geeksforgeeks.org/problems/union-of-two-sorted-arrays-1587115621/1?utm_source=youtube&utm_medium=collab_striver_ytdescription&utm_campaign=union-of-two-sorted-arrays"> Let's Solve</a></p>
-    <p> Find missing number in an array: <a href="https://leetcode.com/problems/missing-number/"> Let's Solve</a></p>
-    <p> Maximum Consecutive Ones: <a href="https://leetcode.com/problems/max-consecutive-ones/"> Let's Solve</a></p>
-    <p> Find the number that appears once, and other numbers twice: <a href="https://leetcode.com/problems/single-number/"> Let's Solve</a></p>
-    <p> Longest subarray with given sum K(positives): <a href="https://practice.geeksforgeeks.org/problems/longest-sub-array-with-sum-k0809/1?utm_source=youtube&utm_medium=collab_striver_ytdescription&utm_campaign=longest-sub-array-with-sum-k"> Let's Solve</a></p>
-    <p> Longest subarray with sum K (Positives + Negatives): <a href="https://www.geeksforgeeks.org/problems/longest-sub-array-with-sum-k0809/1?utm_medium=collab_striver_ytdescription&utm_campaign=longest-sub-array-with-sum-k&utm_source=youtube"> Let's Solve</a></p>
+    <p>Largest Element in Array: <a href="https://www.geeksforgeeks.org/problems/largest-element-in-array4009/0" target="blank">Let's Solve</a></p>
+    <p>Second Largest Element in an Array without sorting: <a href="https://www.geeksforgeeks.org/problems/second-largest3735/1?utm_medium=collab_striver_ytdescription&utm_campaign=second-largest&utm_source=youtube" target="blank">Let's Solve</a></p>
+    <p> Check if the array is sorted: <a href="https://leetcode.com/problems/check-if-array-is-sorted-and-rotated/description/" target="blank"> Let's Solve</a></p>
+    <p> Remove duplicates from Sorted array: <a href="https://leetcode.com/problems/remove-duplicates-from-sorted-array/description/" target="blank"> Let's Solve</a></p>
+    <p> Left Rotate an array by one place: <a href="https://leetcode.com/problems/rotate-array/description/" target="blank"> Let's Solve</a></p>
+    <p> Left rotate an array by D places: <a href="https://leetcode.com/problems/rotate-array/https://leetcode.com/problems/rotate-array/" target="blank"> Let's Solve</a></p>
+    <p> Move Zeros to end: <a href="https://leetcode.com/problems/move-zeroes/" target="blank"> Let's Solve</a></p>
+    <p> Linear Search: <a href="https://www.geeksforgeeks.org/problems/who-will-win-1587115621/1?utm_medium=collab_striver_ytdescription&utm_campaign=who-will-win&utm_source=youtube" target="blank"> Let's Solve</a></p>
+    <p> Find the Union: <a href="https://practice.geeksforgeeks.org/problems/union-of-two-sorted-arrays-1587115621/1?utm_source=youtube&utm_medium=collab_striver_ytdescription&utm_campaign=union-of-two-sorted-arrays" target="blank"> Let's Solve</a></p>
+    <p> Find missing number in an array: <a href="https://leetcode.com/problems/missing-number/" target="blank"> Let's Solve</a></p>
+    <p> Maximum Consecutive Ones: <a href="https://leetcode.com/problems/max-consecutive-ones/" target="blank"> Let's Solve</a></p>
+    <p> Find the number that appears once, and other numbers twice: <a href="https://leetcode.com/problems/single-number/" target="blank"> Let's Solve</a></p>
+    <p> Longest subarray with given sum K(positives): <a href="https://practice.geeksforgeeks.org/problems/longest-sub-array-with-sum-k0809/1?utm_source=youtube&utm_medium=collab_striver_ytdescription&utm_campaign=longest-sub-array-with-sum-k" target="blank"> Let's Solve</a></p>
+    <p> Longest subarray with sum K (Positives + Negatives): <a href="https://www.geeksforgeeks.org/problems/longest-sub-array-with-sum-k0809/1?utm_medium=collab_striver_ytdescription&utm_campaign=longest-sub-array-with-sum-k&utm_source=youtube" target="blank"> Let's Solve</a></p>
   </div>
   <div class="collapsible-header" onclick="toggleContent(this)">
   <span class="arrow">▶</span> Lec 2: Medium
   </div>
   <div class="content">
-    <p>Coming Soon</a></p>
+    <p>2Sum Problem: <a href="https://leetcode.com/problems/two-sum/description/" target="blank"> Let's Solve</a></p>
+    <p>Sort an array of 0's 1's and 2's: <a href="https://leetcode.com/problems/sort-colors/description/" target="blank"> Let's Solve</a></p>
+    <p>Majority Element (>n/2 times): <a href="https://leetcode.com/problems/majority-element/description/" target="blank"> Let's Solve</a></p>
+    <p>Kadane's Algorithm, maximum subarray sum: <a href="https://leetcode.com/problems/maximum-subarray/description/" target="blank"> Let's Solve</a></p>
+    <p>Print subarray with maximum subarray sum (extended version of above problem): <a href="https://www.geeksforgeeks.org/problems/max-sum-in-sub-arrays0824/0?utm_medium=collab_striver_ytdescription&category&utm_source=youtube&utm_campaign=max-sum-in-sub-arrays" target="blank"> Let's Solve</a></p>
+    <p>Stock Buy and Sell: <a href="https://leetcode.com/problems/best-time-to-buy-and-sell-stock/description/" target="blank"> Let's Solve</a></p>
+    <p>Rearrange the array in alternating positive and negative items: <a href="https://leetcode.com/problems/rearrange-array-elements-by-sign/description/" target="blank"> Let's Solve</a></p>
+    <p>Next Permutation: <a href="https://leetcode.com/problems/next-permutation/description/" target="blank"> Let's Solve</a></p>
+    <p>Leaders in an Array problem: <a href="https://www.geeksforgeeks.org/problems/leaders-in-an-array-1587115620/1" target="blank"> Let's Solve</a></p>
+    <p>Longest Consecutive Sequence in an Array: <a href="https://www.geeksforgeeks.org/problems/longest-consecutive-subsequence2449/1" target="blank"> Let's Solve</a></p>
+    <p>Set Matrix Zeros: <a href="https://leetcode.com/problems/set-matrix-zeroes/description/" target="blank"> Let's Solve</a></p>
+    <p>Rotate Matrix by 90 degrees: <a href="https://leetcode.com/problems/rotate-image/description/" target="blank"> Let's Solve</a></p>
+    <p>Print the matrix in spiral manner: <a href="https://leetcode.com/problems/spiral-matrix/description/" target="blank"> Let's Solve</a></p>
+    <p>Count subarrays with given sum: <a href="https://leetcode.com/problems/subarray-sum-equals-k/description/" target="blank"> Let's Solve</a></p>
+
+
+
+
+  </div>
+
+  <div class="collapsible-header" onclick="toggleContent(this)">
+  <span class="arrow">▶</span> Lec 3: Hard
+  </div>
+  <div class="content">
+    <p>coming soon</p>
+
   </div>
 
   <script>
