Added Hard section

--- a/index.html
+++ b/index.html
@@ -222,7 +222,17 @@
   <span class="arrow">▶</span> Lec 3: Hard
   </div>
   <div class="content">
-    <p>coming soon</p>
+    <p>Pascal's Triangle: <a href="https://leetcode.com/problems/pascals-triangle/" target="blank"> Let's Solve</a> 
+    <p>Majority Element (n/3 times): <a href="https://leetcode.com/problems/majority-element-ii/description/" target="blank"> Let's Solve</a> 
+    <p>3-Sum Problem: <a href="https://leetcode.com/problems/3sum/description/" target="blank"> Let's Solve</a> 
+    <p>4-Sum Problem: <a href="https://leetcode.com/problems/4sum/description/" target="blank"> Let's Solve</a> 
+    <p>Largest Subarray with 0 Sum: <a href="https://www.geeksforgeeks.org/problems/largest-subarray-with-0-sum/1?utm_campaign=largest-subarray-with-0-sum&category%5B%5D=Hash&query=category%5B%5DHashcompany%5B%5DAmazonpage1company%5B%5DAmazoncategory%5B%5DHash&page=1&utm_medium=collab_striver_ytdescription&company%5B%5D=Amazon&utm_source=youtube" target="blank"> Let's Solve</a> 
+    <p>Count number of subarrays with given xor K: <a href="https://leetcode.com/problems/count-the-number-of-beautiful-subarrays/description/" target="blank"> Let's Solve</a> 
+    <p>Merge Overlapping Subintervals: <a href="https://leetcode.com/problems/merge-intervals/description/" target="blank"> Let's Solve</a> 
+    <p>Merge two sorted arrays without extra space: <a href="https://leetcode.com/problems/merge-sorted-array/description/" target="blank"> Let's Solve</a> 
+    <p>Find the repeating and missing number: <a href="https://www.geeksforgeeks.org/problems/find-missing-and-repeating2512/1?utm_medium=collab_striver_ytdescription&utm_campaign=find-missing-and-repeating&utm_source=youtube" target="blank"> Let's Solve</a> 
+    <p>Count Inversions: <a href="https://www.geeksforgeeks.org/problems/inversion-of-array-1587115620/1?utm_medium=collab_striver_ytdescription&utm_campaign=inversion-of-array&utm_source=youtube" target="blank"> Let's Solve</a> 
+    <p>Maximum Product Subarray: <a href="https://leetcode.com/problems/maximum-product-subarray/description/" target="blank"> Let's Solve</a> 
 
   </div>
 
