--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
 
   <h1>Strivers A2Z DSA Course/Sheet</h1>
 
-  <!-- Dropdown to jump to step -->
   <div class="dropdown-container">
     <label for="step-select">Jump to Step:</label><br>
     <select id="step-select" onchange="scrollToStep(this.value)">
@@ -105,6 +104,7 @@
       <option value="step1">Step 1: Learn the Basics</option>
       <option value="step2">Step 2: Learn Important Sorting Techniques</option>
       <option value="step3">Step 3: Solve Array Problems</option>
+      <option value="step4">Step 4 : Binary Search [1D, 2D Arrays, Search Space]</option>
     </select>
   </div>
 
@@ -121,7 +121,7 @@
     <p>For loops: <a href="https://www.naukri.com/code360/problems/nth-fibonacci-number_74156" target="blank">Let's Solve</a></p>
     <p>While Loop: <a href="https://www.geeksforgeeks.org/problems/while-loop-printtable-java/1" target="blank">Let's Solve</a></p>
     <p>Functions: <a href="https://www.geeksforgeeks.org/problems/pass-by-reference-and-value/1" target="blank">Let's Solve</a></p>
-    <p>Time Complexity: <a href="https://www.youtube.com/watch?v=FPu9Uld7W-E" target="blank">Time & Space Complexity Video</a></p>
+    <p>Time Complexity: <a href="https://www.youtube.com/watch?v=FPu9Uld7W-E" target="blank">Let's Solve</a></p>
   </div>
 
   <div class="collapsible-header" onclick="toggleContent(this)">
@@ -236,6 +236,31 @@
 
   </div>
 
+
+  <h2 id="step4">Step 4 : Binary Search [1D, 2D Arrays, Search Space]</h2>
+
+  <div class="collapsible-header" onclick="toggleContent(this)">
+    <span class="arrow">▶</span> Lec 1: BS on 1D Arrays
+  </div>
+  <div class="content">
+    <p>Binary Search to find X in sorted array: <a href="https://leetcode.com/problems/binary-search/" target="blank">Let's Solve</a></p>
+    <p>Implement Lower Bound: <a href="https://www.geeksforgeeks.org/problems/floor-in-a-sorted-array-1587115620/1?track=DSASP-Searching&%253BbatchId=154&utm_medium=collab_striver_ytdescription&utm_campaign=floor-in-a-sorted-array&utm_source=youtube" target="blank">Let's Solve</a></p>
+    <p>Implement Upper Bound: <a href="https://www.geeksforgeeks.org/problems/ceil-the-floor2802/1?utm_medium=collab_striver_ytdescription&utm_campaign=ceil-the-floor&utm_source=youtube" target="blank">Let's Solve</a></p>
+    <p>Search Insert Position: <a href="https://leetcode.com/problems/search-insert-position/description/" target="blank">Let's Solve</a></p>
+
+    <p>Floor/Ceil in Sorted Array: <a href="https://www.naukri.com/code360/problems/ceiling-in-a-sorted-array_1825401" target="blank">Let's Solve</a></p>
+    <p>Find the first or last occurrence of a given number in a sorted array: <a href="https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/description/" target="blank">Let's Solve</a></p>
+
+    <p>Count occurrences of a number in a sorted array with duplicates: <a href="https://www.geeksforgeeks.org/problems/number-of-occurrence2259/1?utm_medium=collab_striver_ytdescription&utm_campaign=number-of-occurrence&utm_source=youtube" target="blank">Let's Solve</a></p>
+    <p>Search in Rotated Sorted Array I: <a href="https://leetcode.com/problems/search-in-rotated-sorted-array/description/" target="blank">Let's Solve</a></p>
+    <p>Search in Rotated Sorted Array II: <a href="https://leetcode.com/problems/search-in-rotated-sorted-array-ii/description/" target="blank">Let's Solve</a></p>
+    <p>Find minimum in Rotated Sorted Array: <a href="https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/description/" target="blank">Let's Solve</a></p>
+    <p>Find out how many times has an array been rotated: <a href="https://www.geeksforgeeks.org/problems/rotation4723/1?utm_medium=collab_striver_ytdescription&utm_campaign=rotation&utm_source=youtube" target="blank">Let's Solve</a></p>
+
+    <p>Single element in a Sorted Array: <a href="https://leetcode.com/problems/single-element-in-a-sorted-array/description/" target="blank">Let's Solve</a></p>
+    <p>Find peak element: <a href="https://leetcode.com/problems/find-peak-element/description/" target="blank">Let's Solve</a></p>
+    
+  </div>
   <script>
     function toggleContent(header) {
       const arrow = header.querySelector('.arrow');
